# SCC

./: CMakeLists.txt  README.md  aiger.cpp  aiger.h  blif.cpp  blif.h  blif2aag.cpp  blif2aag.h  blifparser.cpp  blifparser.h  constraint_handler.cpp  constraint_handler.h  converter.cpp  converter.h  main.cpp  merger.cpp  merger.h
libs/retarget/: AMS_ADC.v  AMS_DAC.v  AND2.v  AND2B1.v  AND2B2.v  AND3.v  AND3B1.v  AND3B2.v  AND3B3.v  AND4.v  AND4B1.v  AND4B2.v  AND4B3.v  AND4B4.v  AND5.v  AND5B1.v  AND5B2.v  AND5B3.v  AND5B4.v  AND5B5.v  BSCAN_SPARTAN3.v  BSCAN_SPARTAN3A.v  BSCAN_SPARTAN6.v  BSCAN_VIRTEX4.v  BSCAN_VIRTEX5.v  BSCAN_VIRTEX6.v  BUFGCE_1.v  BUFGMUX_1.v  BUFGMUX_CTRL.v  BUFGMUX_VIRTEX4.v  BUFG_LB.v  BUFIO2.v  BUFIODQS.v  CAPTURE_SPARTAN3.v  CAPTURE_SPARTAN3A.v  CAPTURE_VIRTEX4.v  CAPTURE_VIRTEX5.v  CAPTURE_VIRTEX6.v  CLKDLL.v  CLKDLLE.v  (+827 more)
sh/: check.sh  shell
simplecar/: gen1_merge.aig
